Fixed margins of information cards in all views to include extra space at the bottom of screen

--- a/RoomEasePhoneGapProject/www/css/index.css
+++ b/RoomEasePhoneGapProject/www/css/index.css
@@ -132,7 +132,7 @@ input[type="text"] {
 .list-item {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     transition: box-shadow .25s;
-    margin: 1rem 0 0 1rem;
+    margin: .75rem 0 .75rem 1rem;
     border-radius: 2px;
     background-color: #80cbc4;
     width: 94%;
@@ -169,7 +169,7 @@ input[type="text"] {
 .reservation-item {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     transition: box-shadow .25s;
-    margin: 1rem 0 0 1rem;
+    margin: .75rem 0 .75rem 1rem;
     border-radius: 2px;
     width: 94%;
     padding: 0.1rem 0.5rem 0.5rem 0.85rem;
